# vgbd44-firmware

./: .gitignore  Cargo.toml  Makefile  README.md  Xargo.toml  memory.x  sizes.txt
.cargo/: config
src/: boot.rs  layout.rs  leds.rs  main.rs
src/layout/: dvorak.rs  mod.rs  qwerty.rs
